[project]
name = "agri-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "folium>=0.20.0",
    "lxml>=6.0.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pdfminer>=20191125",
    "pdfminer-six>=20250506",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
    "tabulate>=0.9.0",
]
